[project]
name = "dabstep-py"
version = "0.1.0"
description = "Attempt at running DABstep locally without HF transformers"
requires-python = ">=3.12,<3.13"
authors = []
dependencies = [
    "datasets",
    "pandas",
    "huggingface-hub",
    "smolagents[openai,litellm]",
    "dabstep-benchmark",  # Adding this since we're using dabstep_benchmark.utils
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]